<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username_or_email">Enter your username or email</string>
    <string name="hint_password">Enter your password</string>
    <string name="Re_enter_your_password"> Re-enter your password</string>
    <string name="enter_your_phone_number_or_email"> enter your phone number or email.</string>
    <string name="title_login">Log In</string>
    <string name="title_sign_uo">Sign Up</string>
    <string name="manufacturers">Manufacturers</string>
    <string name="product">Products</string>
</resources>